[tool.poetry]
name = "sanic-test-app"
version = "0.0.1"
description = "This is my load balancing sanic app"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^22.9.1"
aiomysql = "^0.1.1"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.44"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
